llvm/test/aqs-8.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/test/aqs-8.llvm:1:1: error: expected top-level entity
LogError: Unknown function referenced
^
